Add .NET 8 CI/CD workflow

--- a/.github/workflows/dotnet-ci-cd.yml
+++ b/.github/workflows/dotnet-ci-cd.yml
@@ -11,26 +11,33 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+   
     - name: Checkout code
       uses: actions/checkout@v4
 
+   
     - name: Setup .NET 8 SDK
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
 
+   
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore DotnetHelloCI/DotnetHelloCI.csproj
 
+   
     - name: Build project
-      run: dotnet build --configuration Release --no-restore
+      run: dotnet build DotnetHelloCI/DotnetHelloCI.csproj --configuration Release --no-restore
 
+   
     - name: Test project
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet test DotnetHelloCI/DotnetHelloCI.csproj --no-build --verbosity normal
 
+   
     - name: Publish project
-      run: dotnet publish -c Release -o ./publish
+      run: dotnet publish DotnetHelloCI/DotnetHelloCI.csproj -c Release -o ./publish
 
+    
     - name: Create GitHub Release
       id: create_release
       uses: softprops/action-gh-release@v1
@@ -42,6 +49,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+   
     - name: Upload Release Asset
       uses: softprops/action-gh-release@v1
       with:
