Add .NET 8 CI/CD workflow for EC2 deploy

--- a/.github/workflows/dotnet-ci-cd.yml
+++ b/.github/workflows/dotnet-ci-cd.yml
@@ -7,32 +7,45 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-publish:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-   
     - name: Checkout code
       uses: actions/checkout@v4
 
-    
     - name: Setup .NET 8 SDK
       uses: actions/setup-dotnet@v3
       with:
         dotnet-version: 8.0.x
 
-   
     - name: Restore dependencies
       run: dotnet restore DotnetHelloCI/DotnetHelloCI.csproj
 
-    
     - name: Build project
       run: dotnet build DotnetHelloCI/DotnetHelloCI.csproj --configuration Release --no-restore
 
-    
     - name: Test project
       run: dotnet test DotnetHelloCI/DotnetHelloCI.csproj --no-build --verbosity normal
 
-  
     - name: Publish project
       run: dotnet publish DotnetHelloCI/DotnetHelloCI.csproj -c Release -o ./publish
+
+    - name: Copy files to EC2
+      uses: appleboy/scp-action@v0.1.3
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        source: "./publish/*"
+        target: "/home/ubuntu/dotnet-app/"
+
+    - name: Restart .NET app on EC2
+      uses: appleboy/ssh-action@v0.1.8
+      with:
+        host: ${{ secrets.EC2_HOST }}
+        username: ${{ secrets.EC2_USER }}
+        key: ${{ secrets.EC2_KEY }}
+        script: |
+          sudo systemctl stop dotnet-app || true
+          sudo systemctl start dotnet-app
